# Basar

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SECURITY_BOUNDARY.md  demo.html  docker-compose.yml  index.html  render.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/basar_api/: config.py  db.py  main.py  models.py
apps/api/src/basar_api/providers/: ai_0g.py  ai_mock.py  ai_ollama.py  ai_openai_compatible.py  storage_0g.py  storage_base.py  storage_local.py
apps/api/src/basar_api/routes/: ask.py  claims.py  export.py  health.py  ingest.py  og.py  sources.py
apps/api/src/basar_api/schemas/: answer.py  claim_card.py  knowledge_card.py
apps/api/src/basar_api/services/: ai_service.py  archive_service.py  citation_service.py  ingest_service.py  retrieval_service.py  source_score_service.py
apps/api/src/basar_api/tests/: test_ai_mock.py  test_ask.py  test_claim_card.py  test_export.py  test_health.py  test_retrieval.py  test_source_card.py  test_source_scoring.py  test_storage.py
apps/api/src/hacker_librarian_api/: __init__.py  config.py  db.py  main.py  models.py
apps/api/src/hacker_librarian_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/hacker_librarian_api/providers/: ai_0g.py  ai_base.py  ai_mock.py  ai_ollama.py  ai_openai_compatible.py  storage_0g.py  storage_local.py
apps/api/src/hacker_librarian_api/routes/: ask.py  (+6 more)
apps/cli/: pyproject.toml
apps/cli/src/basar_cli/: main.py
apps/cli/src/hacker_librarian_cli/: main.py
apps/cli/src/hacker_librarian_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+93 files in other folders)
