[project]
name = "basar-cli"
version = "0.1.0-alpha"
description = "CLI for Basar"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["basar-api"]

[project.scripts]
basar = "basar_cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src", "../api/src"]
testpaths = ["src/basar_cli/tests"]
